Fix GitHub Actions workflows: Update paths for repository root structure

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - 'wordpress-plugin-wallet/**'
+      - '**'
   workflow_dispatch:
     inputs:
       environment:
@@ -40,7 +40,7 @@ jobs:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: ./wordpress-plugin-wallet/
+          local-dir: ./
           server-dir: /wp-content/plugins/sui-user-wallets/
           exclude: |
             **/.git*
